<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >

    <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="3dp"
        android:background="@color/app_bg"
        >
        <Button
            android:layout_width="67dp" 
      	    android:layout_height="wrap_content"
        	android:textColor="@color/white"
        	android:id="@+id/cancel"
        	android:text="@string/camera_cancel"
      	    android:layout_centerVertical="true"
            android:background="@color/app_bg"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@color/app_bg"
            android:layout_centerInParent="true"
            android:text="相册"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:id="@+id/back"
            android:text="@string/album"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/app_bg"
            android:layout_centerVertical="true"
            android:visibility="gone"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/app_bg"
        >
 		<Button
            android:id="@+id/preview"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/preview"
            android:layout_marginLeft="8dp"
            android:background="@color/app_bg"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:background="@color/app_bg"
            />
    </RelativeLayout>

    <GridView
        android:id="@+id/myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/headview"
        android:layout_centerInParent="true"
        android:layout_marginTop="2dp"
        android:horizontalSpacing="6dp"
        android:numColumns="4"
        android:verticalSpacing="6dp"
         />
    <TextView
        android:id="@+id/myText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_photo" 
        android:textColor="@color/black"
        />

</RelativeLayout>